compiler/snapshots/show-variable.wipple.snap
---
source: compiler/test.rs
expression: output
---
status: 1

stderr:
Compiling library/src/foundation... done
Compiling show-variable.wipple... done
Error: compilation failed with 1 feedback item(s)

stdout:

Feedback:

`show` (compiler/tests/show-variable.wipple:6:1-6:5) (error-instance):

  Can't describe   `my-variable` (compiler/tests/show-variable.wipple:5:1-5:12).

 You can't display   `my-variable` (compiler/tests/show-variable.wipple:5:1-5:12) on the screen or use it in placeholders because
 it can't be converted into a string.
