compiler/snapshots/too-many-inputs.wipple.snap
---
source: compiler/test.rs
expression: output
---
status: 1

stderr:
Compiling library/src/foundation... done
Compiling too-many-inputs.wipple... done
Error: compilation failed with 1 feedback item(s)

stdout:

Feedback:

`show` (compiler/tests/too-many-inputs.wipple:3:1-3:5) (extra-input):

  `show` (compiler/tests/too-many-inputs.wipple:3:1-3:5) only needs 1 input.

  Try removing 2 extra inputs here.
