compiler/snapshots/trig.wipple.snap
---
source: compiler/test.rs
expression: output
---
status: 0

stderr:
Compiling library/src/foundation... done
Compiling trig.wipple... done

stdout:
True
True
True
