compiler/snapshots/undefined-name.wipple.snap
---
source: compiler/test.rs
expression: output
---
status: 1

stderr:
Compiling library/src/foundation... done
Compiling undefined-name.wipple... done
Error: compilation failed with 1 feedback item(s)

stdout:

Feedback:

`foo` (compiler/tests/undefined-name.wipple:3:1-3:4) (unresolved):

  Can't find `foo`.

  Double-check your spelling.
