compiler/snapshots/unzip.wipple.snap
---
source: compiler/test.rs
expression: output
---
status: 0

stderr:
Compiling library/src/foundation... done
Compiling unzip.wipple... done

stdout:
Left:
1
2
3
Right:
a
b
c
