compiler/snapshots/when-mismatched-types.wipple.snap
---
source: compiler/test.rs
expression: output
---
status: 1

stderr:
Compiling library/src/foundation... done
Compiling when-mismatched-types.wipple... done
Error: compilation failed with 1 feedback item(s)

stdout:

Feedback:

`"hi"` (compiler/tests/when-mismatched-types.wipple:5:12-5:16) (conflicting-types):

  `"hi"` (compiler/tests/when-mismatched-types.wipple:5:12-5:16) is a `Number` (compiler/tests/when-mismatched-types.wipple:4:11-4:13) or a `String` (compiler/tests/when-mismatched-types.wipple:5:12-5:16), but it can only be one of these.

  `"hi"` (compiler/tests/when-mismatched-types.wipple:5:12-5:16) must be the same type as `42` (compiler/tests/when-mismatched-types.wipple:4:11-4:13), `when True {⋯}` (compiler/tests/when-mismatched-types.wipple:3:7-6:2), `42` (compiler/tests/when-mismatched-types.wipple:4:11-4:13), and 3 others; double-check these.

  -  `42` (compiler/tests/when-mismatched-types.wipple:4:11-4:13) is a Number.

  -  `"hi"` (compiler/tests/when-mismatched-types.wipple:5:12-5:16) is a String.

  -  `value` (library/src/foundation/io.wipple:11:9-11:14) must have the same type everywhere in this use of `show` (library/src/foundation/io.wipple:10:1-11:43).
